# jj-gh

./: .envrc  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  LICENSE  README.md  flake.nix  graphql-validate.py  graphql.config.toml  release-plz.toml  renovate.json  treefmt.nix
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: cd.yml  ci.yml  lint-pr.yml  release-plz.yml  update-flake.yml  update-schema.yml
nix/: hm-module.nix  treefmt.nix
nix/checks/: ast-grep.nix  clippy.nix  default.nix  docs.nix  graphql-validate.nix  hm-module-schema.nix  nextest.nix  treefmt.nix
nix/pkgs/: default.nix  fetch-schema.nix  gen-docs.nix  gen-manpage.nix  jj-gh-dev.nix  jj-gh.nix  print-config-schema.nix  release-plz-patched.nix  release.nix  udeps.nix  update-docs.nix
rule-tests/: logging.yml  type-ascription.yml
rule-tests/__snapshots__/: no-direct-process-spawn-snapshot.yml  no-log-error-snapshot.yml  no-raw-subprocess-stderr-in-error-snapshot.yml  no-space-joined-argv-in-log-snapshot.yml  no-status-for-jj-command-snapshot.yml  prefer-turbofish-over-let-type-ascription-snapshot.yml
rules/: no-direct-process-spawn.yml  no-log-error.yml  no-raw-subprocess-stderr-in-error.yml  no-space-joined-argv-in-log.yml  no-status-for-jj-command.yml  prefer-turbofish-over-let-type-ascription.yml
src/: auth.rs  cli.rs  config.rs  debug.rs  editor.rs  error.rs  frontmatter.rs  fs.rs  lib.rs  logging.rs  macro_support.rs  main.rs  model.rs  proc.rs  template.rs  util.rs
src/commands/: debug.rs  mod.rs
src/commands/completions/: bash.rs  fish.rs  mod.rs  zsh.rs
src/commands/pr/: auto_merge.rs  create.rs  edit.rs  fetch.rs  log.rs  mod.rs  retry_failed.rs  url.rs
src/commands/pr/create/: mod.rs  title_picker.rs
src/commands/pr/restack/: interactive.rs  mod.rs
src/completions/: bash.rs  fish.rs  mod.rs  zsh.rs
src/gh/: create_pr.gql  create_pr.rs  enable_auto_merge.gql  enable_auto_merge.rs  enqueue_pr.rs  get_pr.rs  github.graphql  lookup_base.gql  lookup_base.rs  mod.rs  pr_lookup.rs  prs_with_ci_status.gql  prs_with_ci_status.rs  real.rs  remote.rs  reviewer.rs
src/gh/queries/: convert_to_draft.gql  convert_to_draft.rs  create_pr.rs  disable_auto_merge.gql  disable_auto_merge.rs  enable_auto_merge.rs  enqueue_pr.gql  enqueue_pr.rs  find_open_pr.gql  find_open_pr.rs  get_pr.gql  get_pr.rs  lookup_base.rs  mark_ready_for_review.gql  mark_ready_for_review.rs  mod.rs  pr_check_contexts_page.gql  pr_check_contexts_page.rs  prs_with_ci_status.gql  prs_with_ci_status.rs  remove_labels.gql  remove_labels.rs  update_pr.gql  update_pr.rs
src/git/: mod.rs  real.rs  url.rs
src/jj/: inject.rs  mod.rs  real.rs
src/pr/: auto_merge.rs  create.rs  editor.rs  frontmatter.rs  mod.rs  retry_failed.rs  template.rs  validation.rs
src/pr/editor/: create.rs  edit.rs  mod.rs
src/pr/fetch/: bookmark_template.rs  mod.rs
src/pr/pr_log/: mod.rs
src/pr/restack/: interactive.rs  mod.rs
src/ui/: mod.rs  spinner.rs  tui.rs
tools/: fetch-schema.py
tools/gen-docs/: Cargo.toml
tools/gen-docs/src/: main.rs
tools/gen-manpage/: Cargo.toml
tools/gen-manpage/src/: main.rs
tools/jj-gh-config-derive/: Cargo.toml
tools/jj-gh-config-derive/src/: lib.rs
tools/print-config-schema/: Cargo.toml
tools/print-config-schema/src/: main.rs
