[package]
description = "Opinionated `jj` tools for working with GitHub from your terminal"
edition = "2024"
license = "MIT"
name = "jj-gh"
repository = "https://github.com/mrjones2014/jj-gh"
version = "0.2.1"
include = [
  "/src/**/*.rs",
  "/src/**/*.gql",
  "/src/gh/github.graphql",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
  # this isn't technically needed for the rust crate,
  # but I want release-plz to include changes to it
  # in the CHANGELOG.md
  "/nix/hm-module.nix",
]

[workspace]
members = ["tools/gen-docs", "tools/print-config-schema"]

[features]
schema-validation = ["dep:schemars"]

[dependencies]
anstyle = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
figment = { version = "0.10", features = ["toml"] }
flexi_logger = { version = "0.31", default-features = false, features = [
  "colors",
] }
gix = { version = "0.84", default-features = false, features = [
  "max-performance-safe",
  "comfort",
  "basic",
  "blocking-network-client",
  "blocking-http-transport-reqwest-native-tls",
  "credentials",
  "sha1",
] }
graphql_client = "0.16"
http = "1"
log = "0.4"
octocrab = "0.51"
schemars = { version = "1", optional = true }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.13"
shell-words = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "process", "time"] }
toml = "1"
url = "2"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

[profile.release]
strip = "symbols"
