[package]
name = "jj-gh-config-derive"
edition = "2024"
license = "MIT"
version = "0.1.1"
repository = "https://github.com/mrjones2014/jj-gh"
description = "You are probably looking for the `jj-gh` crate instead."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[lints.clippy]
allow_attributes = "deny"
pedantic = { level = "deny", priority = -1 }
